@@ -3,6 +3,9 @@
 	  for the purposes of skipping faces, maps and such, as they could prevent
 	  someone from ever seeing the face. Also, enforcing const-ness in KeyBinder
 	  class and on key actions.
+	Rev 7245:
+	* actors.*, gamewin.cc, npctime.cc: Fixed bug #3598886 "HP < 1 should regen
+	  faster than per hour".
 
 2012-12-29	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* shapeid.h, shapes/vgafile.*, usecode/conversation.cc: Fixed bug #3001914:
